Fixed z-index of particles background

--- a/src/App.css
+++ b/src/App.css
@@ -13,5 +13,5 @@ button {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: -1;
 }
